# rust-plibsys-sys

./: Cargo.toml  README.md  build.rs
plibsys/: .CMakeLists.txt.swp
plibsys/src/: patomic.h  pcondvariable.h  pcryptohash.h  pdir.h  perror.h  perrortypes.h  pfile.h  phashtable.h  pinifile.h  plibraryloader.h  plist.h  pmain.h  pmem.h  pmutex.h  pprocess.h  prwlock.h  psemaphore.h  pshm.h  pshmbuffer.h  psocket.h  psocketaddress.h  pspinlock.h  pstring.h  ptimeprofiler.h  ptree.h  ptypes.h  puthread.h
src/: lib.rs
tests/: external_link.rs
